# quickcfg

./: .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  weekly.yml
examples/: list_installed.rs
src/: command.rs  config.rs  environment.rs  facts.rs  file.rs  file_operations.rs  file_system.rs  file_utils.rs  git.rs  hierarchy.rs  lib.rs  macros.rs  main.rs  opts.rs  os.rs  packages.rs  rustup.rs  scheduler.rs  stage.rs  state.rs  system.rs  template.rs  timestamp.rs  unit.rs
src/ffi/: win.rs
src/ffi/win/: msi.rs  shellapi.rs
src/git/: external.rs  git2.rs
src/os/: unix.rs  windows.rs
src/system/: copy_dir.rs  download.rs  download_and_run.rs  from_db.rs  git_sync.rs  install.rs  install_packages.rs  link.rs  link_dir.rs  macros.rs  only_for.rs
