[package]
name = "quickcfg"
version = "0.6.2"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
rust-version = "1.64"
description = "Do basic configuration of a system, declaratively and quickly."
documentation = "https://docs.rs/quickcfg"
readme = "README.md"
homepage = "https://github.com/udoprog/quickcfg"
repository = "https://github.com/udoprog/quickcfg"
license = "MIT/Apache-2.0"
keywords = ["cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "qc"
path = "src/main.rs"

[badges]
travis-ci = { repository = "udoprog/quickcfg" }

[dependencies]
serde = { version = "1.0.155", features = ["derive"] }
serde_yaml = "0.9.19"
anyhow = "1.0.69"
thiserror = "1.0.39"
relative-path = { version = "1.8.0", features = ["serde"] }
clap = { version = "4.1.8", features = ["derive"] }
rayon = "1.7.0"
ignore = "0.4.20"
log = "0.4.17"
pretty_env_logger = "0.4.0"
handlebars = "4.3.6"
directories = "4.0.1"
fxhash = "0.2.1"
humantime = "2.1.0"
reqwest = { version = "0.11.14", features = ["blocking"] }
filetime = "0.2.20"
git2 = { version = "0.16.1", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["shellapi", "winuser", "synchapi", "processthreadsapi"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[features]
default = ["git2"]
