[package]
name = "quickcfg"
version = "0.6.3"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2024"
rust-version = "1.91"
description = "Do basic configuration of a system, declaratively and quickly."
documentation = "https://docs.rs/quickcfg"
readme = "README.md"
homepage = "https://github.com/udoprog/quickcfg"
repository = "https://github.com/udoprog/quickcfg"
license = "MIT OR Apache-2.0"
keywords = ["cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "qc"
path = "src/main.rs"

[badges]
travis-ci = { repository = "udoprog/quickcfg" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(quickcfg_nightly)'] }

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_yaml = "0.9.21"
anyhow = "1.0.70"
thiserror = "2.0.17"
relative-path = { version = "2.0.1", features = ["serde"] }
clap = { version = "4.2.1", features = ["derive"] }
rayon = "1.7.0"
ignore = "0.4.20"
log = "0.4.17"
pretty_env_logger = "0.5.0"
handlebars = "6.3.2"
directories = "6.0.0"
fxhash = "0.2.1"
humantime = "2.1.0"
reqwest = { version = "0.12.24", features = ["blocking"] }
filetime = "0.2.21"
git2 = { version = "0.20.2", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["shellapi", "winuser", "synchapi", "processthreadsapi", "winerror", "impl-default"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[features]
default = ["git2"]
